Add fb meta data

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="Alice author"
       content="Alice author app"
     />
+    <meta property="og:title" content="Alice Ivinya & Alice Gent Author" />
+    <meta property="og:url" content="http://alicegent.com" />
+    <meta property="og:image" content="http://alicegent.com/static/media/fb-preview-logo.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Find adventure in magical worlds with unconventional heroines." />
+    <meta property="og:locale" content="en_GB" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Alice</title>
