Console errors - Don't preload fonts and correct apple favicon

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Find adventure in magical worlds with unconventional heroines." />
     <meta property="og:locale" content="en_GB" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Alice</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
