Add contributing section to README and enforce styling with prettier

--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,35 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Alice author"
-      content="Alice author app"
-    />
+    <meta name="Alice author" content="Alice author app" />
     <meta property="og:title" content="Alice Ivinya & Alice Gent Author" />
     <meta property="og:url" content="http://alicegent.com" />
-    <meta property="og:image" content="http://alicegent.com/static/media/fb-preview-logo.jpg" />
+    <meta
+      property="og:image"
+      content="http://alicegent.com/static/media/fb-preview-logo.jpg"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Find adventure in magical worlds with unconventional heroines." />
+    <meta
+      property="og:description"
+      content="Find adventure in magical worlds with unconventional heroines."
+    />
     <meta property="og:locale" content="en_GB" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Alice</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-302V854TSX"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-302V854TSX"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-302V854TSX');
+      gtag("config", "G-302V854TSX");
     </script>
   </head>
   <body>
